// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fomr 初始化值 1`] = `
<div>
  <form>
    <input
      class="weui-input corn-input"
      data-testid="input"
      name="name"
      type="text"
      value="小明"
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name="sex"
        readonly=""
        value="false"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
      男
    </div>
    <div
      class=""
      name="age"
    >
      <input
        class="corn-checkbox-group-hide"
        data-testid="check"
        name="age"
        readonly=""
        value="[]"
      />
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        1
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        2
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="3"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        3
      </div>
    </div>
    <div
      class=""
      name="study"
    >
      <input
        class="corn-checkbox-group-hide"
        data-testid="check"
        name="study"
        readonly=""
        value=""
      />
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        大学
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        小学
      </div>
    </div>
    <div
      class="corn-textarea"
    >
      <textarea
        class="corn-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        name="liuyan"
        placeholder=""
      >
        123456
      </textarea>
      <div
        class="corn-textarea-number"
      >
        6
        /
        300
      </div>
      <div
        class="corn-textarea-floor"
      />
    </div>
  </form>
</div>
`;

exports[`Fomr 改变初始化值 1`] = `
<div>
  <form>
    <input
      class="weui-input corn-input"
      data-testid="input"
      name="name"
      type="text"
      value="123"
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        name="sex"
        readonly=""
        value="true"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/97f184d7-4fda-43f1-bd56-8313ee8a2b94.png"
        />
      </div>
      男
    </div>
    <div
      class=""
      name="age"
    >
      <input
        class="corn-checkbox-group-hide"
        data-testid="check"
        name="age"
        readonly=""
        value="[]"
      />
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        1
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        2
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="3"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        3
      </div>
    </div>
    <div
      class=""
      name="study"
    >
      <input
        class="corn-checkbox-group-hide"
        data-testid="check"
        name="study"
        readonly=""
        value=""
      />
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        大学
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        小学
      </div>
    </div>
    <div
      class="corn-textarea"
    >
      <textarea
        class="corn-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        name="liuyan"
        placeholder=""
      >
        456
      </textarea>
      <div
        class="corn-textarea-number"
      >
        3
        /
        300
      </div>
      <div
        class="corn-textarea-floor"
      />
    </div>
  </form>
</div>
`;

exports[`Fomr 渲染 1`] = `
<div>
  <form>
    <input
      class="weui-input corn-input"
      data-testid="input"
      type="text"
      value=""
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        readonly=""
        value="false"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
        />
      </div>
    </div>
    <div
      class="corn-textarea"
    >
      <textarea
        class="corn-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        placeholder=""
      />
      <div
        class="corn-textarea-number"
      >
        0
        /
        300
      </div>
      <div
        class="corn-textarea-floor"
      />
    </div>
  </form>
</div>
`;

exports[`Fomr 自带值 1`] = `
<div>
  <form>
    <input
      class="weui-input corn-input"
      data-testid="input"
      type="text"
      value="123"
    />
    <div
      class="corn-if corn-ac corn-checkbox"
      data-testid="corn-checkbox"
    >
      <input
        class="corn-checkbox-hide"
        data-testid="check"
        readonly=""
        value="true"
      />
      <div
        class="taro-img corn-img corn-checkbox-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://assets.xrkmm.cn/u/2000001252935290/97f184d7-4fda-43f1-bd56-8313ee8a2b94.png"
        />
      </div>
      男
    </div>
    <div
      class=""
      name="age"
    >
      <input
        class="corn-checkbox-group-hide"
        data-testid="check"
        name="age"
        readonly=""
        value="[]"
      />
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        1
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        2
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="3"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        3
      </div>
    </div>
    <div
      class=""
      name="study"
    >
      <input
        class="corn-checkbox-group-hide"
        data-testid="check"
        name="study"
        readonly=""
        value=""
      />
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        大学
      </div>
      <div
        class="corn-if corn-ac corn-checkbox"
        data-testid="corn-checkbox"
      >
        <input
          class="corn-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <div
          class="taro-img corn-img corn-checkbox-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
          />
        </div>
        小学
      </div>
    </div>
    <div
      class="corn-textarea"
    >
      <textarea
        class="corn-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        name="liuyan"
        placeholder=""
      />
      <div
        class="corn-textarea-number"
      >
        0
        /
        300
      </div>
      <div
        class="corn-textarea-floor"
      />
    </div>
  </form>
</div>
`;
